--- a/connect4.html
+++ b/connect4.html
@@ -8,11 +8,15 @@
   <title>connect4</title>
   <meta name="description" content="A beautifull and powerfull connect4">
   <meta name="author" content="SitePoint">
+  <link rel="stylesheet" href="connect4.css">
 
 </head>
 
 <body>
-
+    <content>
+        <nav></nav>
+        <canvas id="connect4Canvas" width="200" height="100"></canvas>
+    </content>
     <script src="Controller/Controller.js"></script>
     <script src="View/View.js"></script>
     <script src="Model/Model.js"></script>
