--- a/connect4.html
+++ b/connect4.html
@@ -9,6 +9,7 @@
   <meta name="description" content="A beautifull and powerfull connect4">
   <meta name="author" content="SitePoint">
   <link rel="stylesheet" href="connect4.css">
+  <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 
 </head>
 
@@ -17,8 +18,8 @@
 <body>
     <content>
         <nav>
-            <form>
-                <input type="checkbox" id="nav-toggle-AI" class="nav-toggle-AI">
+            <form  action="" id="form-connect4">
+                <input type="checkbox" id="nav-toggle-AI" class="nav-toggle-AI" name="ai">
                 <label for="nav-toggle-AI" class="nav-toggle-label-AI">
                     Active AI
                 </label>
