--- a/connect4.html
+++ b/connect4.html
@@ -42,7 +42,10 @@
     </content>
     <script src="Controller/Controller.js"></script>
     <script src="View/View.js"></script>
+    <script src="View/Jeton.js"></script>
+    <script src="View/Notif.js"></script>
     <script src="Model/Model.js"></script>
+    <script src="Model/Computer.js"></script>
     <script>
       const app = new Controller(new Model(), new View("connect4Canvas"));
     </script>
