--- a/connect4.html
+++ b/connect4.html
@@ -38,7 +38,7 @@
                 <button type="submit">New Game !</button>
             </form>
         </nav>
-        <div class="arrow-down" id="arrow-down" style="cursor: pointer;" tabindex="5"><div class="arrow-down_part-left"></div><div class="arrow-down_part-right"></div></div>
+        <div class="arrow-down" id="arrow-down" tabindex="5"><div class="arrow-down_part-left"></div><div class="arrow-down_part-right"></div></div>
         <canvas id="connect4Canvas" width="900" height="760"></canvas>
     </content>
     <script src="Controller/Controller.js"></script>
