--- a/src/connect4.html
+++ b/src/connect4.html
@@ -1,7 +1,10 @@
-
+<div class="stars"></div>
 <content>
-    <nav>
-    </nav>
-    <div class="arrow-down" id="arrow-down" tabindex="5"><div class="arrow-down_part-left"></div><div class="arrow-down_part-right"></div></div>
-    <canvas id="connect4Canvas" width="900" height="760"></canvas>
+  <nav></nav>
+
+  <div class="arrow-down" id="arrow-down" tabindex="5">
+    <div class="arrow-down_part-left"></div>
+    <div class="arrow-down_part-right"></div>
+  </div>
+  <canvas id="connect4Canvas" width="900" height="760"></canvas>
 </content>
