--- a/src/connect4.html
+++ b/src/connect4.html
@@ -1,4 +1,3 @@
-<div class="stars"></div>
 <content>
   <nav></nav>
 
@@ -6,5 +5,8 @@
     <div class="arrow-down_part-left"></div>
     <div class="arrow-down_part-right"></div>
   </div>
-  <canvas id="connect4Canvas" width="900" height="760"></canvas>
+  <div id="glitch">
+    <canvas id="connect4Canvas" width="900" height="760"></canvas>
+  </div>
 </content>
+<div class="stars"></div>
