--- a/src/connect4.html
+++ b/src/connect4.html
@@ -5,8 +5,8 @@
     <div class="arrow-down_part-left"></div>
     <div class="arrow-down_part-right"></div>
   </div>
-  <div id="glitch">
-    <canvas id="connect4Canvas" width="900" height="760"></canvas>
-  </div>
+<canvas id="connect4Canvas" width="900" height="760"></canvas>
+<div id="hologram1"></div>
+<div id="hologram2"></div>
 </content>
 <div class="stars"></div>
