--- a/src/connect4.html
+++ b/src/connect4.html
@@ -1,9 +1,9 @@
 <content>
   <nav></nav>
 
-  <div class="arrow-down" id="arrow-down" tabindex="5">
-    <div class="arrow-down_part-left"></div>
-    <div class="arrow-down_part-right"></div>
+  <div id="coin">
+    <div class="tails"></div>
+    <div class="heads"></div>
   </div>
 <canvas id="connect4Canvas" width="900" height="760"></canvas>
 <div id="hologram1"></div>
