--- a/src/connect4.html
+++ b/src/connect4.html
@@ -10,4 +10,5 @@
 <div id="hologram2"></div>
 </content>
 <div class="stars"></div>
-<video controls="" autoplay="" name="media"><source src="https://www.thesoundarchive.com/starwars/star-wars-theme-song.mp3" type="audio/mpeg"></video>
+<audio controls="" autoplay="" name="media" autoplay loop><source src="https://www.thesoundarchive.com/starwars/star-wars-theme-song.mp3" type="audio/mpeg"></audio>
+<img class="gif gif1">
