Add modal with gif

--- a/src/connect4.html
+++ b/src/connect4.html
@@ -5,10 +5,25 @@
     <div class="tails"></div>
     <div class="heads"></div>
   </div>
-<canvas id="connect4Canvas" width="900" height="760"></canvas>
-<div id="hologram1"></div>
-<div id="hologram2"></div>
+  </div>
+  <canvas id="connect4Canvas" width="900" height="760"></canvas>
+  <div id="hologram1"></div>
+  <div id="hologram2"></div>
 </content>
 <div class="stars"></div>
-<audio controls="" autoplay="" name="media" autoplay loop><source src="https://www.thesoundarchive.com/starwars/star-wars-theme-song.mp3" type="audio/mpeg"></audio>
-<img class="gif gif1">
+<audio controls="" autoplay="" name="media" autoplay loop>
+  <source
+    src="https://www.thesoundarchive.com/starwars/star-wars-theme-song.mp3"
+    type="audio/mpeg"
+  />
+</audio>
+<img class="gif gif1" />
+<div class="modal" id="modal">
+  <div class="modal-content">
+    <span class="close-button" id="buttonClose">&times;</span>
+    <div class="div-modal">
+       <h1 id="winMessage">Modal test</h1>
+    <img src="http://i.stack.imgur.com/SBv4T.gif" alt="this slowpoke moves"  width="100" id="gifWin" />
+    </div>
+   
+  </div>
