update music back

--- a/src/connect4.html
+++ b/src/connect4.html
@@ -11,7 +11,7 @@
   <div id="hologram2"></div>
 </content>
 <div class="stars"></div>
-<audio controls="" autoplay="" name="media" autoplay loop>
+<audio controls="" name="media" autoplay loop>
   <source
     src="https://www.thesoundarchive.com/starwars/star-wars-theme-song.mp3"
     type="audio/mpeg"
